fix 'list-container' elements' box-shadow on small screen and fix height wrapper

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,10 @@
 .wrapper {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    min-height: calc(100% - 15px * 2);
     margin: 0;
-    padding: 0;
+    padding: 15px;
 }
