--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@ body {
     max-width: 100%;
     height: 100vh;
     margin: 0 auto;
-    padding: 0 5px;
+    padding: 0;
     font-family: Arial, sans-serif;
     background-color: #576574;
 }
@@ -30,8 +30,16 @@ h2 {
     color: #ffffff;
     box-shadow: 20px 20px 0 #222f3e;
 
+    @media screen and (max-width: 650px){
+        box-shadow: 10px 10px 0 #222f3e;
+    }
+
     &.loading {
         box-shadow: 20px 20px 0 #0b7461;
+
+        @media screen and (max-width: 650px){
+            box-shadow: 10px 10px 0 #0b7461;
+        }
     }
 
     .list {
